Name:		hmetafont
Version: 	0.0.1
Synopsis:	Variable font creation based on metafont.
Category: 	Graphics, Geometry, Typography
Copyright: 	Kristof Bastiaensen (2016)
Stability:	Unstable
License:	BSD3
License-file:	LICENSE
Author:		Kristof Bastiaensen
Maintainer:	Kristof Bastiaensen
Bug-Reports: 	https://github.com/kuribas/hmetafont/issues
Build-type:	Simple
Cabal-version:	>=1.8
Description:	This library is a variable font creation library, based on metafont, but adapted to modern technology.  It support creating standard compliant opentype fonts and variable opentype fonts.  The API should be familiar for users of metafont.
                
source-repository head
  type:		git
  location:	https://github.com/kuribas/cubicbezier

Library
  Ghc-options: -Wall
  Build-depends: base >= 3 && < 5, cubicbezier >= 0.5.0, mfsolve >= 0.3.2, opentype >= 0.1.2,
                 hashable >= 1.2.4, random >= 1.1, containers >= 0.5.3, lens >= 0.1.2, mtl >= 2.1.1
  Exposed-Modules:
        Typography.HMetafont